# guile-aspell

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.md  aspell.scm  aspell.scm.in  bootstrap.conf  cfg.mk  configure.ac  pre-inst-env.in
.github/workflows/: macos-10.15.yml  macos-11.yml  mingw-guile-3.0.yml  ubuntu-bionic-guile-2.2.yml  ubuntu-focal-guile-3.0.yml
aspell/: aspell.scm  gu_aspell.c  gu_aspell.h
doc/: guile-aspell.texi
tests/: spell.scm
