# Copyright 2009, 2013, 2016, 2021 Michael L Gran

# This file is part of guile-aspell.

# guile-aspell is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.

# guile-aspell is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.

# You should have received a copy of the GNU General Public License
# along with guile-aspell.  If not, see <http://www.gnu.org/licenses/>.


## Process this file with automake to produce Makefile.in
ACLOCAL_AMFLAGS = -I m4

### FLAGS ###

### MAIN TARGETS ###

dist_guilesite_DATA = \
	aspell.scm

### SOURCES ###

### LINKER ###

### OTHER RULES ###

### CHECK ###

# TESTLIB = \
#	test/lib.scm \
#	test/lib2.scm

# TESTS_ENVIRONMENT = GUILE_AUTO_COMPILE=0 \
#	guile -L $(abs_top_srcdir) -s

# TESTS = \
#	test/aspell_test.test

### DOCUMENTATION ###

info_TEXINFOS = \
	doc/guile-aspell.texi

### DISTRIBUTION ###

EXTRA_DIST = \
	AUTHORS \
	INSTALL \
	NEWS \
	README \
	COPYING \
	ChangeLog \
	doc/fdl-1.3.texi \
	build-aux/texinfo.tex

### INSTALLATION ###
